--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "io.extendreality.tilia.locomotors.climbing.unity",
     "displayName": "Tilia Locomotors Climbing Unity",
     "description": "A mechanism that simulates climbing in a spatial environment for the Unity software.",
+    "changelogUrl": "https://github.com/ExtendRealityLtd/Tilia.Locomotors.Climbing.Unity/blob/master/CHANGELOG.md",
+    "documentationUrl": "https://github.com/ExtendRealityLtd/Tilia.Locomotors.Climbing.Unity/tree/master/Documentation",
+    "licensesUrl": "https://github.com/ExtendRealityLtd/Tilia.Locomotors.Climbing.Unity/blob/master/LICENSE.md",
     "version": "1.7.64",
     "unity": "2018.3",
     "unityRelease": "10f1",
