feat(Editor): add climbable creator window
The Climbable Creator window allows easy creation of climbable objects
by selecting a GameObject and using the Climbable Creator window to
wrap the GameObejct in the Climbable prefab.

--- a/Editor/Tilia.Locomotors.Climbing.Unity.Editor.asmdef
+++ b/Editor/Tilia.Locomotors.Climbing.Unity.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Tilia.Locomotors.Climbing.Unity.Editor",
     "references": [
-        "Zinnia.Editor"
+        "Zinnia.Editor",
+        "Tilia.Locomotors.Climbing.Unity.Runtime",
+        "Tilia.Interactions.Interactables.Unity.Runtime"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
